# SDR_NC

./: .gitignore  Readme.md  readme.md
Software/GnuRadio_Block_NC/gr-CogNC/grc/: CMakeLists.txt  CogNC_delay_packet.xml  CogNC_flow_filling.xml  CogNC_hybrid_stream_control.xml  CogNC_hybrid_stream_controller.xml  CogNC_primary_destination_control.xml  CogNC_primary_rx_control.xml  CogNC_primary_source_control.xml  CogNC_primary_tx_control.xml  CogNC_radom_complex_generator.xml  CogNC_secondary_endnode_control.xml  CogNC_secondary_relay_control.xml  CogNC_test_block.xml  CogNC_vfdm_adaptive_precoder.xml  CogNC_vfdm_header_insertion.xml  CogNC_vfdm_header_removal.xml  CogNC_vfdm_metrics_control.xml
Software/GnuRadio_Block_NC/gr-CogNC/lib/: CMakeLists.txt  delay_packet_impl.cc  delay_packet_impl.h  flow_filling_impl.cc  flow_filling_impl.h  hybrid_stream_control_impl.cc  hybrid_stream_control_impl.h  hybrid_stream_controller_impl.cc  hybrid_stream_controller_impl.h  primary_destination_control_impl.cc  primary_destination_control_impl.h  primary_rx_control_impl.cc  primary_rx_control_impl.h  primary_source_control_impl.cc  primary_source_control_impl.h  primary_tx_control_impl.cc  primary_tx_control_impl.h  qa_CogNC.cc  qa_CogNC.h  qa_vfdm_header_removal.cc  qa_vfdm_header_removal.h  radom_complex_generator_impl.cc  radom_complex_generator_impl.h  secondary_endnode_control_impl.cc  secondary_endnode_control_impl.h  secondary_relay_control_impl.cc  secondary_relay_control_impl.h  test_CogNC.cc  test_block_impl.cc  test_block_impl.h  vfdm_adaptive_precoder_impl.cc  vfdm_adaptive_precoder_impl.h  vfdm_header_insertion_impl.cc  vfdm_header_insertion_impl.h  vfdm_header_removal_impl.cc  vfdm_header_removal_impl.h  vfdm_metrics_control_impl.cc  vfdm_metrics_control_impl.h
Software/GnuRadio_Block_NC/gr-DNC/grc/: CMakeLists.txt  DNC_LC_decoding.xml  DNC_MDC_decoding.xml  DNC_check_received_packet.xml  DNC_delay_packet.xml  DNC_destination1_controller.xml  DNC_destination2_controller.xml  DNC_end_node_control.xml  DNC_end_node_controller.xml  DNC_flow_controller_bb.xml  DNC_flow_controller_cc.xml  DNC_flow_controller_xx.xml  DNC_nodeA_controller.xml  DNC_nodeB_controller.xml  DNC_nodeC_controller.xml  DNC_nodeR_controller.xml  DNC_packet_arrangement.xml  DNC_receiver_control_p2p.xml  DNC_relay1_controller.xml  DNC_relay2_controller.xml  DNC_relay_control.xml  DNC_relay_controller.xml  DNC_relay_node_controller.xml  DNC_source1_controller.xml  DNC_source2_controller.xml  DNC_terminal_controller.xml  DNC_transmitter_control_p2p.xml
Software/GnuRadio_Block_NC/gr-DNC/lib/: CMakeLists.txt  LC_decoding_impl.cc  LC_decoding_impl.h  MDC_decoding_impl.cc  MDC_decoding_impl.h  check_received_packet_impl.cc  check_received_packet_impl.h  delay_packet_impl.cc  delay_packet_impl.h  destination1_controller_impl.cc  destination1_controller_impl.h  destination2_controller_impl.cc  destination2_controller_impl.h  end_node_control_impl.cc  end_node_control_impl.h  end_node_controller_impl.cc  end_node_controller_impl.h  flow_controller_bb_impl.cc  flow_controller_bb_impl.h  flow_controller_cc_impl.cc  flow_controller_cc_impl.h  nodeA_controller_impl.cc  nodeA_controller_impl.h  nodeB_controller_impl.cc  nodeB_controller_impl.h  nodeC_controller_impl.cc  nodeC_controller_impl.h  nodeR_controller_impl.cc  nodeR_controller_impl.h  packet_arrangement_impl.cc  packet_arrangement_impl.h  qa_DNC.cc  qa_DNC.h  receiver_control_p2p_impl.cc  receiver_control_p2p_impl.h  relay1_controller_impl.cc  relay1_controller_impl.h  relay2_controller_impl.cc  relay2_controller_impl.h  relay_control_impl.cc  (+14 more)
Software/GnuRadio_Block_NC/gr-DNC2/lib/: CMakeLists.txt  convolutional_decoder_impl.cc  convolutional_decoder_impl.h  convolutional_encoder_impl.cc  convolutional_encoder_impl.h  hamming_decoder_impl.cc  hamming_decoder_impl.h  hamming_encoder_impl.cc  hamming_encoder_impl.h  image_vector_source_impl.cc  image_vector_source_impl.h  qa_DNC2.cc  qa_DNC2.h  test_DNC2.cc  zero_elimination_impl.cc  zero_elimination_impl.h
Software/GnuRadio_Block_NC/gr-hoang/grc/: CMakeLists.txt  hoang_char_to_int.xml  hoang_image_text_sink.xml  hoang_image_text_source.xml  hoang_image_vector_sink.xml  hoang_image_vector_source.xml  hoang_int_to_char.xml  hoang_psk_demapper.xml  hoang_psk_mapper.xml  hoang_qam16_demapper.xml  hoang_qam16_mapper.xml  hoang_sequence_combination.xml  hoang_sequence_inversion.xml  hoang_sequence_splitting.xml  hoang_signal_gain.xml  hoang_snr_check.xml
Software/GnuRadio_Block_NC/gr-hoang/lib/: CMakeLists.txt  char_to_int_impl.cc  char_to_int_impl.h  image_text_sink_impl.cc  image_text_sink_impl.h  image_text_source_impl.cc  image_text_source_impl.h  image_vector_sink_impl.cc  image_vector_sink_impl.h  image_vector_source_impl.cc  image_vector_source_impl.h  imatext_rx.txt  imatext_rx_source.txt  int_to_char_impl.cc  int_to_char_impl.h  psk_demapper_impl.cc  psk_demapper_impl.h  psk_mapper_impl.cc  psk_mapper_impl.h  qa_hoang.cc  qa_hoang.h  qam16_demapper_impl.cc  qam16_demapper_impl.h  qam16_mapper_impl.cc  qam16_mapper_impl.h  sequence_combination_impl.cc  sequence_combination_impl.h  sequence_inversion_impl.cc  sequence_inversion_impl.h  sequence_splitting_impl.cc  sequence_splitting_impl.h  signal_gain_impl.cc  signal_gain_impl.h  snr_check_impl.cc  snr_check_impl.h  test.txt  test_hoang.cc  test_meta.txt
Software/GnuRadio_Block_NC/gr-s4a/grc/: CMakeLists.txt  s4a_active_stream_selector.xml  s4a_bit_to_byte.xml  s4a_bpsk_demapper.xml  s4a_bpsk_mapper.xml  s4a_byte_to_bit.xml  s4a_channel_reciprocity_tester.xml  s4a_coherence_time_counter_generator.xml  s4a_coherence_time_estimator.xml  s4a_console_sink_xx.xml  s4a_csi_converter.xml  s4a_cyclic_prefix_insertion.xml  s4a_cyclic_prefix_removal.xml  s4a_frame_generation.xml  s4a_ofdm_demodulator.xml  s4a_ofdm_equalizer.xml  s4a_ofdm_metrics_controller.xml  s4a_ofdm_modulator.xml  s4a_ofdm_power_scaling.xml  s4a_ofdm_sync.xml  s4a_ofdm_transceiver.xml  s4a_parallel_to_serial.xml  s4a_primary_user_rx_controller.xml  s4a_qam4_demapper.xml  s4a_qam4_mapper.xml  (+12 more)
(+521 files in other folders)
